Bug 782342 - blob: protocol no Content-Length header. r=sicking